fix: footer align

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -733,7 +733,6 @@ h2 {
 
 .footer {
   background-color: #2C2C2C;
-  height: 417px;
   color: #fff;
   display: flex;
 
@@ -755,7 +754,6 @@ h2 {
     display: flex;
     justify-content: space-between;
     padding: 60px 0;
-    align-items: center;
     width: 100%;
 
     @media (max-width: 1280px) {
@@ -765,6 +763,7 @@ h2 {
     }
 
     @media (max-width: 768px) {
+      align-items: center;
       justify-content: space-around;
     }
   }
@@ -773,6 +772,7 @@ h2 {
     background-image: url('./assets/img/footer_logo.png');
     height: 94px;
     width: 145px;
+    margin-right: 50px;
   }
 
   &_nav {
@@ -809,9 +809,10 @@ h2 {
     letter-spacing: 0.42px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    gap: 30px;
 
     @media (max-width: 768px) {
+      justify-content: space-between;
       margin-top: 15px;
     }
 
